--- a/themes/include-her/package.json
+++ b/themes/include-her/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.1.1",
     "fontawesome": "^4.7.2",
     "gulp": "^3.9.1",
+    "instafeed.js": "^1.4.1",
     "sass": "^1.3.0",
     "watch": "^1.0.2"
   }
